--- a/Slardarius/index.html
+++ b/Slardarius/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 
-	<div class = "header clearfix">
+	<header>
 		<div class="container">
 			<div class="row">
 				<div class="menu">
@@ -51,11 +51,11 @@
 							<div class="row">
 								<div class="col-md-7">
 									<ol>
-										<li> 1. Слышу и понимаю Вас.</li>
-										<li> 2. Проектирование UI/UX - архитектуру.</li>
-										<li> 3. Разработка отзывчевого сайта.</li>
-										<li> 4. Виртуозно использую типографтку.</li>
-									</ol>
+								<li> 1. Слышу и понимаю Вас.</li>
+								<li> 2. Проектирование UI/UX - архитектуру.</li>
+								<li> 3. Разработка отзывчевого сайта.</li>
+								<li> 4. Виртуозно использую типографтку.</li>
+							</ol>
 								</div>
 								<div class="col-md-offset-7">
 									<div class="next">
@@ -67,53 +67,20 @@
 						</div>
 					</div>
 					<div class="nout">
-						<div class="container">
-							<div class="row"><div class="col-md-12">
-								<div class="nout__item"> </div></div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-</div>
-</div>
-<section>
-	<div class="container">
-		<div class="row">
-			<div class="information_about_me">
-				<div class="col-md-6">
-					<div class="about_me">
-						<div class="col-md-offset-3">
-							<div class="me">Кто же я такой ?</div>
-						</div>
 						<div class="col-md-12">
-							<div class="text_about_me">
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt magnam at quisquam, pariatur. Dolorem molestiae aperiam, ipsa quisquam ratione ab eveniet ex optio, eligendi architecto, maxime sint repellendus perferendis voluptate impedit explicabo nostrum itaque excepturi repellat! Ratione doloremque consequatur officiis, dolorum natus necessitatibus ex itaque quas, quo doloribus ducimus voluptatibus!</p>
-							</div>
+							<div class="nout__item"> </div>
 						</div>
 					</div>
-				</div>
-			</div>
-			<div class="second_information">
-				<div class="col-md-6">
-					<div class="photo"></div>
-				</div>
-			<div class="next_section">
-				<div class="col-md-offset-7">
-					<div class="iformation_next">
-						<p>Так-же ознакомтесь <span class = "rectangle"> с моими работами </span> </p>
 					</div>
 				</div>
-			</div>
 			</div>
 		</div>
 	</div>
 </div>
-</div>
+</header>
+<section>
 </section>
+
 	<!--[if lt IE 9]>
 	<script src="libs/html5shiv/es5-shim.min.js"></script>
 	<script src="libs/html5shiv/html5shiv.min.js"></script>
