--- a/Slardarius/index.html
+++ b/Slardarius/index.html
@@ -20,10 +20,11 @@
 	<link rel="stylesheet" href="css/fonts.css" />
 	<link rel="stylesheet" href="css/main.css" />
 	<link rel="stylesheet" href="css/media.css" />
+	<link rel="stylesheet" href="">
 </head>
 <body>
 
-	<div class = "header clearfix">
+	<div class = "header">
 		<div class="container">
 			<div class="row">
 				<div class="menu">
@@ -42,11 +43,11 @@
 				</div>
 				<div class="ads_information">
 					<div class="col-md-offset-1">
-						<div class="why_me">
-							<p>Вы спросите, почему иммено я ?</p>
+						<div class="why_me paralax">
+							<p> Вы спросите, почему иммено я ?</p>
 						</div>
 					</div>
-					<div class="ads">
+					<div class="ads paralax">
 						<div class="col-md-12">
 							<div class="row">
 								<div class="col-md-7">
@@ -59,8 +60,8 @@
 								</div>
 								<div class="col-md-offset-7">
 									<div class="next">
-										<p>Узнайте обо мне сами!</p>
-										<div class="buttons"> <p> о себе </p> </div>
+										<p> Узнайте обо мне сами!</p>
+										<div class="buttons "> <p> о себе </p> </div>
 									</div>
 								</div>
 							</div>
@@ -68,8 +69,10 @@
 					</div>
 					<div class="nout">
 						<div class="container">
-							<div class="row"><div class="col-md-12">
-								<div class="nout__item"> </div></div>
+							<div class="row">
+								<div class="col-md-12 col-md-push-1">
+									<div class="nout__item"> </div>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -80,6 +83,7 @@
 </div>
 </div>
 </div>
+
 <section>
 	<div class="container">
 		<div class="row">
@@ -101,13 +105,16 @@
 				<div class="col-md-6">
 					<div class="photo"></div>
 				</div>
-			<div class="next_section">
-				<div class="col-md-offset-7">
-					<div class="iformation_next">
-						<p>Так-же ознакомтесь <span class = "rectangle"> с моими работами </span> </p>
+				<div class="next_section">
+					<div class="col-md-offset-7">
+						<div class="iformation_next">
+							<p>Так-же ознакомтесь <span class = "rectangle"> с моими работами </span> </p>
+						</div>
 					</div>
 				</div>
-			</div>
+				<div class="col-md-offset-7">
+					<div class="buttons_second"> Работы </div>
+				</div>
 			</div>
 		</div>
 	</div>
