--- a/Slardarius/index.html
+++ b/Slardarius/index.html
@@ -1,196 +1,232 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]><html lang="ru" class="lt-ie9 lt-ie8 lt-ie7"><![endif]-->
-<!--[if IE 7]><html lang="ru" class="lt-ie9 lt-ie8"><![endif]-->
-<!--[if IE 8]><html lang="ru" class="lt-ie9"><![endif]-->
-<!--[if gt IE 8]><!-->
-<html lang="ru">
-<!--<![endif]-->
-<head>
-	<meta charset="utf-8" />
-	<title>Slardarius</title>
-	<meta name="description" content="Сайт визитка" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="shortcut icon" href="favicon.png" />
-	<!-- BOOTSTRAP -->
-	<link rel="stylesheet" href="libs/bootstrap/bootstrap-grid-3.3.1.min.css" />
-	<!-- FONT AWESOME -->
-	<link rel="stylesheet" href="libs/font-awesome-4.2.0/css/font-awesome.min.css" />
-	<!-- FANCEBOX -->
-	<link rel="stylesheet" href="libs/fancybox/jquery.fancybox.css" />
-	<!-- OWL carousel -->
-	<link rel="stylesheet" href="libs/owl-carousel/owl.carousel.css" />
-	<link rel="stylesheet" href="libs/owl-carousel/owl.theme.css">
-	<link rel="stylesheet" href="libs/owl-carousel/owl.transitions.css">
-	<link rel="stylesheet" href="libs/countdown/jquery.countdown.css" />
-	<!-- Animate CSS  -->
-	<link rel="stylesheet" href="css/animate.css">
-	<!-- ALL CSS FILES -->
-	<link rel="stylesheet" href="css/fonts.css" />
-	<link rel="stylesheet" href="css/main.css" />
-	<link rel="stylesheet" href="css/media.css" />
-</head>
-<body>
+		<!DOCTYPE html>
+		<!--[if lt IE 7]><html lang="ru" class="lt-ie9 lt-ie8 lt-ie7"><![endif]-->
+		<!--[if IE 7]><html lang="ru" class="lt-ie9 lt-ie8"><![endif]-->
+		<!--[if IE 8]><html lang="ru" class="lt-ie9"><![endif]-->
+		<!--[if gt IE 8]><!-->
+		<html lang="ru">
+		<!--<![endif]-->
+		<head>
+			<meta charset="utf-8" />
+			<title>Slardarius</title>
+			<meta name="description" content="Сайт визитка" />
+			<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+			<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+			<link rel="shortcut icon" href="favicon.png" />
+			<!-- BOOTSTRAP -->
+			<link rel="stylesheet" href="libs/bootstrap/bootstrap-grid-3.3.1.min.css" />
+			<!-- FONT AWESOME -->
+			<link rel="stylesheet" href="libs/font-awesome-4.2.0/css/font-awesome.min.css" />
+			<!-- FANCEBOX -->
+			<link rel="stylesheet" href="libs/fancybox/jquery.fancybox.css" />
+			<!-- OWL carousel -->
+			<link rel="stylesheet" href="libs/owl-carousel/owl.carousel.css" />
+			<link rel="stylesheet" href="libs/owl-carousel/owl.theme.css">
+			<link rel="stylesheet" href="libs/owl-carousel/owl.transitions.css">
+			<link rel="stylesheet" href="libs/countdown/jquery.countdown.css" />
+			<!-- Animate CSS  -->
+			<link rel="stylesheet" href="css/animate.css">
+			<!-- ALL CSS FILES -->
+			<link rel="stylesheet" href="css/fonts.css" />
+			<link rel="stylesheet" href="css/main.css" />
+			<link rel="stylesheet" href="css/media.css" />
+		</head>
+		<body>
 
-	<header>
-		<div class="container">
-			<div class="row">
-				<div class="menu">
-					<div class="col-md-2 col-xs-11 col-xs-push-1">
-						<p class = "logo"> Slardarius </p>
-					</div>
-					<div class="col-md-5 col-md-push-4 col-xs-12">
-						<nav>
-							<ul>
-								<li><a href="#"> о себе </a>   </li>
-								<li><a href="#"> портфолио </a></li>
-								<li><a href="#"> контакты </a> </li>
-							</ul>
-						</nav>
-					</div>
-				</div>
-				<div class="ads_information">
-					<div class="col-md-10 col-ms-10 col-sm-push-1 col-xs-10 col-xs-push-1 ">
-						<div class="why_me paralax wow fadeIn">
-							<p> Вы спросите, почему иммено я ?</p>
+			<header>
+				<div class="container">
+					<div class="row">
+						<div class="menu">
+							<div class="col-md-2 col-xs-11 col-xs-push-1">
+								<p class = "logo"> Slardarius </p>
+							</div>
+							<div class="col-md-5 col-md-push-4 col-xs-12">
+								<nav>
+									<ul>
+										<li><a href="#"> о себе </a>   </li>
+										<li><a href="#"> портфолио </a></li>
+										<li><a href="#"> контакты </a> </li>
+									</ul>
+								</nav>
+							</div>
 						</div>
-					</div>
-					<div class="ads paralax">
-						<div class="col-md-12">
-							<div class="row">
-								<div class="col-md-7  col-sm-10 col-sm-push-2 col-xs-11 col-xs-push-1">
-									<ol>
-										<li> 1. Слышу и понимаю Вас.</li>
-										<li> 2. Проектирование UI/UX - архитектуру.</li>
-										<li> 3. Разработка отзывчевого сайта.</li>
-										<li> 4. Виртуозно использую типографтку.</li>
-									</ol>
+						<div class="ads_information">
+							<div class="col-md-10 col-ms-10 col-sm-push-1 col-xs-10 col-xs-push-1 ">
+								<div class="why_me paralax wow fadeIn">
+									<p> Вы спросите, почему иммено я ?</p>
 								</div>
-								<div class="col-md-4 col-md-push-1 col-sm-5 col-sm-push-3 col-xs-10 col-xs-push-2">
-									<div class="next">
-										<p class = "wow fadeInRight"> Узнайте обо мне сами!</p>
-										<div class="buttons_about_me buttons wow fadeIn"> <p> о себе </p> </div>
+							</div>
+							<div class="ads paralax">
+								<div class="col-md-12">
+									<div class="row">
+										<div class="col-md-7  col-sm-10 col-sm-push-2 col-xs-11 col-xs-push-1">
+											<ol>
+												<li>  Слышу и понимаю Вас.</li>
+												<li>  Проектирование UI/UX - архитектуру.</li>
+												<li>  Разработка отзывчевого сайта.</li>
+												<li>  Виртуозно использую типографтку.</li>
+											</ol>
+										</div>
+										<div class="col-md-4 col-md-push-1 col-sm-5 col-sm-push-3 col-xs-10 col-xs-push-2">
+											<div class="next">
+												<p class = "wow fadeInRight"> Узнайте обо мне сами!</p>
+												<div class="buttons_about_me buttons wow fadeIn"> <p> о себе </p> </div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="nout">
+								<div class="container">
+									<div class="row">
+										<div class="col-md-11 col-md-push-1 col-sm-12 col-xs-12 hidden-sm hidden-xs">
+											<div class="nout__item"> <img src="img/nout.png" alt=""></div>
+										</div>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="nout">
-						<div class="container">
-							<div class="row">
-								<div class="col-md-11 col-md-push-1 col-sm-12 col-xs-12 hidden-sm hidden-xs">
-									<div class="nout__item"> </div>
+				</div>
+			</div>
+		</header>
+
+		<section id="first_container">
+			<arcticle>
+				<div class="container">
+					<div class="row">
+						<div class="col-md-6 col-md-push-0 col-sm-6  col-sm-push-0 col-xs-12">
+							<div class="block_information">
+								<div class="row">
+									<div class="col-md-12 col-md-push-6  col-sm-12 col-sm-push-6 col-xs-10 col-xs-push-2">
+										<div class="who_i_am  wow fadeInLeft" data-wow-offset = '100'>Кто же я такой ?</div>
+									</div>
+									<div class="col-md-12 col-sm-12 col-xs-12">
+										<div class="information_about_me">
+											Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis est, aliquid voluptate, asperiores explicabo veritatis illum maxime deleniti magni commodi assumenda totam quaerat atque minus in, error velit nihil libero architecto aperiam iure ea quos voluptas veniam. Quisquam inventore quas distinctio perspiciatis, nostrum, obcaecati at doloremque rerum maiores dolore quod magnam totam officia odit nihil voluptatum laborum similique vel omnis!
+										</div>
+									</div>
 								</div>
+							</div>
+						</div>
+						<div class="col-md-5 col-md-push-1 col-sm-6 col-sm-push-0 col-xs-12">
+							<div class="my_img"></div>
+							<div class="information_addit wow fadeInRight" data-wow-offset = '50'>Так-же ознакомтесь <span class="colorfull">с моими работами</span></div>
+							<div class="buttons_works buttons">Работы </div>
+						</div>
+					</div>
+				</div>
+			</arcticle>
+		</section>
+		<section id="second_container">
+			<div class="container">
+				<div class="row">
+					<div class="second__header_img">
+						<div class="second__header__img"><img src="img/line.png" alt=""></div>
+					</div>
+					<div class="col-md-5 col-md-push-7">
+						<div class="second__title wow fadeInRight" data-wow-offset = '50'>Портфолио</div>
+					</div>
+				</div>
+				<div class="second__header_bg_container"> <img src="img/second_bg_container.png" alt=""></div>
+				<div class="row">
+					<div class="col-md-12 col-sm-12 col-xs-12">
+						<div class="second__iknow wow fadeInLeft" data-wow-offset = '50'>Что же я знаю ?</div>
+					</div>
+					<div class="col-md-6 col-md-push-1 col-sm-6 col-xs-10 col-xs-push-2">
+						<div class="second__whatiknow wow fadeIn" data-wow-offset = '70'>
+							<ul>
+								<li class = "wow fadeIn" data-wow-duration = '1.5s' data-wow-offset = '50'>html</li>
+								<li class = "wow fadeIn" data-wow-duration = '2s' data-wow-offset = '50'>css</li>
+								<li class = "wow fadeIn" data-wow-duration = '2.5s' data-wow-offset = '50'>javascript</li>
+								<li class = "wow fadeIn" data-wow-duration = '3s' data-wow-offset = '50'>jquery</li>
+								<li class = "wow fadeIn" data-wow-duration = '3.5s' data-wow-offset = '50'>bootstrap</li>
+							</ul>
+						</div>
+					</div>
+					<div class="col-md-4 col-md-push-2 col-sm-4 col-sm-push-2 col-xs-12">
+						<div class="second_callme"><p class = "imp">Заинтересовало?</p> <p>Тогда свяжитесь со мной</p></div>
+						<div class="second__button buttons">Обратная связь</div>
+					</div>
+				</div>
+				<div class="second__bg_container"> </div>
+				<div class="row">
+					<div class="bg_carousel hidden-xs"> <img src="img/bg_slider.png" alt=""> </div>
+					<div class="col-md-12 col-sm-12 col-xs-11">
+						<div class="container_owl">
+							<div class="slide_next hidden-xs"><i class=" fa-slider fa fa-angle-right"></i></div>
+							<div class="slide_prev hidden-xs"><i class=" fa-slider fa fa-angle-left"></i></div>
+							<div class="second__owl-carousel">
+								<div class="content"><img src="img/first.jpg" alt="1"></div>
+								<div class="content"><img src="img/second.jpg" alt="1"></div>
+								<div class="content"><img src="img/first.jpg" alt="1"></div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-	</div>
-</header>
+		</section>
 
-<section id="first_container">
-	<arcticle>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-6 col-md-push-0 col-sm-6  col-sm-push-0 col-xs-12">
-					<div class="block_information">
-						<div class="row">
-							<div class="col-md-12 col-md-push-6  col-sm-12 col-sm-push-6 col-xs-10 col-xs-push-2">
-								<div class="who_i_am  wow fadeInLeft" data-wow-offset = '100'>Кто же я такой ?</div>
-							</div>
-							<div class="col-md-12 col-sm-12 col-xs-12">
-								<div class="information_about_me">
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis est, aliquid voluptate, asperiores explicabo veritatis illum maxime deleniti magni commodi assumenda totam quaerat atque minus in, error velit nihil libero architecto aperiam iure ea quos voluptas veniam. Quisquam inventore quas distinctio perspiciatis, nostrum, obcaecati at doloremque rerum maiores dolore quod magnam totam officia odit nihil voluptatum laborum similique vel omnis!
-								</div>
+		<section id="third_section">
+			<div class="container">
+				<div class="row">
+					<div class="third__block_information">
+						<div class="col-md-6 col-sm-6 col-xs-11 col-xs-push-1">
+							<ol>
+								<li>  Слышу и понимаю Вас.</li>
+								<li>  Проектирование UI/UX - архитектуру.</li>
+								<li>  Разработка отзывчевого сайта.</li>
+								<li>  Виртуозно использую типографтку.</li>
+							</ol>
+						</div>
+					</div>
+					<div class="third__section_form">
+						<div class="col-md-4 col-md-push-1 col-sm-4 col-sm-push-1 col-xs-12">
+							<div class="form">
+								<form action="">
+									<div class="img_photo"><i class="fa-user fa fa-user-o"></i></div>
+									<input type="text" placeholder = "Имя"> <br/>
+									<input type="email" placeholder = "E-mail"> <br/>
+									<input type="tel" placeholder = "Телефон"> <br/>
+									<div class="buttons callme">Отправить</div>
+								</form>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div class="col-md-5 col-md-push-1 col-sm-6 col-sm-push-0 col-xs-12">
-					<div class="my_img"></div>
-					<div class="information_addit wow fadeInRight" data-wow-offset = '50'>Так-же ознакомтесь <span class="colorfull">с моими работами</span></div>
-					<div class="buttons_works buttons">Работы </div>
-				</div>
 			</div>
-		</div>
-	</arcticle>
-</section>
-<section id="second_container">
-	<div class="container">
-		<div class="row">
-			<div class="second__header_img">
-				<div class="second__header__img"></div>
-			</div>
-			<div class="col-md-5 col-md-push-7">
-				<div class="second__title wow fadeInRight" data-wow-offset = '50'>Портфолио</div>
-			</div>
-		</div>
-		<div class="second__header_bg_container"></div>
-		<div class="row">
-			<div class="col-md-12 col-sm-12 col-xs-12">
-				<div class="second__iknow wow fadeInLeft" data-wow-offset = '50'>Что же я знаю ?</div>
-			</div>
-			<div class="col-md-6 col-md-push-1 col-sm-11 sol-sm-push col-xs-10 col-xs-push-2">
-				<div class="second__whatiknow wow fadeIn" data-wow-offset = '50'>
-					<ul>
-						<li class = "wow fadeIn" data-wow-duration = '1.5s' data-wow-offset = '50'>html</li>
-						<li class = "wow fadeIn" data-wow-duration = '2s' data-wow-offset = '50'>css</li>
-						<li class = "wow fadeIn" data-wow-duration = '2.5s' data-wow-offset = '50'>javascript</li>
-						<li class = "wow fadeIn" data-wow-duration = '3s' data-wow-offset = '50'>jquery</li>
-						<li class = "wow fadeIn" data-wow-duration = '3.5s' data-wow-offset = '50'>bootstrap</li>
-					</ul>
-				</div>
-			</div>
-			<div class="col-md-4 col-md-push-2 col-sm-5 col-sm-push-7 col-xs-12">
-				<div class="second_callme"><p class = "imp">Заинтересовало?</p> <p>Тогда свяжитесь со мной</p></div>
-				<div class="second__button buttons">Обратная связь</div>
-			</div>
-		</div>
-		<div class="second__bg_container"> </div>
-			<div class="col-md-12 col-sm-12 col-xs-12">
-					<div class="second__owl-carousel">
-			<div class="content"><img src="img/first.jpg" alt=""></div>
-			<div class="content"><img src="img/second.jpg" alt=""></div>
-			<div class="content"><img src="img/first.jpg" alt=""></div>
-			<div class="content"><img src="img/second.jpg" alt=""></div>
-		</div>
-			</div>
-	</div>
-</section>
-	<!--[if lt IE 9]>
-	<script src="libs/html5shiv/es5-shim.min.js"></script>
-	<script src="libs/html5shiv/html5shiv.min.js"></script>
-	<script src="libs/html5shiv/html5shiv-printshiv.min.js"></script>
-	<script src="libs/respond/respond.min.js"></script>
-	<![endif]-->
-	<!-- Just jquery -->
-	<script src="libs/jquery/jquery-1.11.1.min.js"></script>
-	<script src="libs/jquery-mousewheel/jquery.mousewheel.min.js"></script>
-	<!-- fancybox js -->
-	<script src="libs/fancybox/jquery.fancybox.pack.js"></script>
-	<!-- Waypoints js -->
-	<script src="libs/waypoints/waypoints-1.6.2.min.js"></script>
-	<!-- Scrolling js -->
-	<script src="libs/scrollto/jquery.scrollTo.min.js"></script>
-	<!-- OWL carousel -->
-	<script src="libs/owl-carousel/owl.carousel.min.js"></script>
-	<!-- Jquery plugins -->
-	<script src="libs/countdown/jquery.plugin.js"></script>
-	<script src="libs/countdown/jquery.countdown.min.js"></script>
-	<script src="libs/countdown/jquery.countdown-ru.js"></script>
-	<!-- Navigation js -->
-	<script src="libs/landing-nav/navigation.js"></script>
-	<!-- My js file -->
-	<script src="js/common.js"></script>
-	<!-- Jqery UI -->
-	<script src = "js/jquery-ui.js" type="text/javascript"></script>
-	<script src = "js/jquery-ui.min.js" type="text/javascript"></script>
-	<!-- WOW.js -->
-	<script src = "js/wow.min.js" type="text/javascript"> </script>
-	<script>	new WOW().init(); </script>
+		</section>
+			<!--[if lt IE 9]>
+			<script src="libs/html5shiv/es5-shim.min.js"></script>
+			<script src="libs/html5shiv/html5shiv.min.js"></script>
+			<script src="libs/html5shiv/html5shiv-printshiv.min.js"></script>
+			<script src="libs/respond/respond.min.js"></script>
+			<![endif]-->
+			<!-- Just jquery -->
+			<script src="libs/jquery/jquery-1.11.1.min.js"></script>
+			<script src="libs/jquery-mousewheel/jquery.mousewheel.min.js"></script>
+			<!-- fancybox js -->
+			<script src="libs/fancybox/jquery.fancybox.pack.js"></script>
+			<!-- Waypoints js -->
+			<script src="libs/waypoints/waypoints-1.6.2.min.js"></script>
+			<!-- Scrolling js -->
+			<script src="libs/scrollto/jquery.scrollTo.min.js"></script>
+			<!-- OWL carousel -->
+			<script src="libs/owl-carousel/owl.carousel.min.js"></script>
+			<!-- Jquery plugins -->
+			<script src="libs/countdown/jquery.plugin.js"></script>
+			<script src="libs/countdown/jquery.countdown.min.js"></script>
+			<script src="libs/countdown/jquery.countdown-ru.js"></script>
+			<!-- Navigation js -->
+			<script src="libs/landing-nav/navigation.js"></script>
+			<!-- My js file -->
+			<script src="js/common.js"></script>
+			<!-- Jqery UI -->
+			<script src = "js/jquery-ui.js" type="text/javascript"></script>
+			<script src = "js/jquery-ui.min.js" type="text/javascript"></script>
+			<!-- WOW.js -->
+			<script src = "js/wow.min.js" type="text/javascript"> </script>
+			<script>	new WOW().init(); </script>
 
 
-</body>
-</html>
+		</body>
+		</html>
