--- a/Slardarius/index.html
+++ b/Slardarius/index.html
@@ -29,10 +29,8 @@
 			<link rel="stylesheet" href="css/fonts.css" />
 			<link rel="stylesheet" href="css/main.css" />
 			<link rel="stylesheet" href="css/media.css" />
-			<style>header{width:100%;height:85vh;background:#689ac8 url(img/header.png) center center/cover;background-attachment:fixed}header nav{font-family:"RobotoCondensetRegular"}header nav ul{display:flex;justify-content:space-around}header nav ul li{padding:29px 0 0 0;text-transform:uppercase;list-style-type:none}header nav ul li a{color:#111d2c}header nav ul li:hover{padding-bottom:10px;border-bottom:2px solid #ff9000}.logo{font-size:30px;padding:26px 3px;font-family:"RobotoBold";color:#026988;cursor:pointer}.menu{width:100%;height:142px}.why_me{font-family:"RobotoLight";font-size:50px;color:#026988;width:100%;height:101px}.ads{font-size:25px;line-height:37.5px;font-family:"RobotoRegular";color:#000}.next{font-size:25px;font-family:"RobotoLight";color:#026988;height:82px;width:100%}.buttons_about_me{margin-top:30px}.buttons{width:179px;height:32px;border-radius:5px;cursor:pointer;background-color:#2687a4;cursor:pointer;padding:0px 50px;color:#fff;font-size:20px;padding:0px 45px;text-transform:uppercase;border-right:16px solid #ff9000;-webkit-transition:all .25s linear;-moz-transition:all .25s linear;transition:all .25s linear;line-height:34px;font-family:"RobotoBold"}.buttons:hover{background-color:#ff9000;border-right:16px solid #2687a4}.buttons:active{background-color:#19d697}.nout__item{width:100%;height:auto;margin-top:70px;position:absolute}</style>
 		</head>
 		<body>
-
 			<header>
 				<div class="container">
 					<div class="row">
@@ -88,11 +86,9 @@
 						</div>
 					</div>
 				</div>
-			</div>
 		</header>
 
 		<section id="first_container">
-			<arcticle>
 				<div class="container">
 					<div class="row">
 						<div class="col-md-6 col-md-push-0 col-sm-6  col-sm-push-0 col-xs-12">
@@ -116,8 +112,8 @@
 						</div>
 					</div>
 				</div>
-			</arcticle>
 		</section>
+
 		<section id="second_container">
 			<div class="container">
 				<div class="row">
@@ -183,7 +179,7 @@
 					<div class="third__section_form">
 						<div class="col-md-4 col-md-push-1 col-sm-5 col-sm-push-1 col-xs-12">
 							<div class="form">
-								<form action="">
+								<form action=" " method = ' '>
 									<div class="img_photo"><i class="fa-user fa fa-user-o"></i></div>
 									<input class = "name" type="text"  placeholder = "Имя"> <br/>
 									<input class = "email" type="email" placeholder = "E-mail"> <br/>
