--- a/Slardarius/index.html
+++ b/Slardarius/index.html
@@ -106,7 +106,7 @@
 							</div>
 						</div>
 						<div class="col-md-5 col-md-push-1 col-sm-6 col-sm-push-0 col-xs-12">
-							<div class="my_img"></div>
+							<div class="my_img"><img src="img/myphoto.png" alt=""></div>
 							<div class="information_addit wow fadeInRight" data-wow-offset = '50'>Так-же ознакомтесь <span class="colorfull">с моими работами</span></div>
 							<div class="buttons_works buttons">Работы </div>
 						</div>
