--- a/Slardarius/index.html
+++ b/Slardarius/index.html
@@ -38,7 +38,7 @@
 							<div class="col-md-2 col-xs-11 col-xs-push-1">
 								<p class = "logo"> Slardarius </p>
 							</div>
-							<div class="col-md-5 col-md-push-4 col-xs-12">
+							<div class="col-md-5 col-md-push-4 col-xs-11">
 								<nav>
 									<ul>
 										<li><a href="#"> о себе </a>   </li>
@@ -49,7 +49,7 @@
 							</div>
 						</div>
 						<div class="ads_information">
-							<div class="col-md-10 col-ms-10 col-sm-push-1 col-xs-10 col-xs-push-1 ">
+							<div class="col-md-10 col-ms-10 col-sm-push-1 col-xs-12">
 								<div class="why_me paralax wow fadeIn">
 									<p> Вы спросите, почему иммено я ?</p>
 								</div>
@@ -59,10 +59,10 @@
 									<div class="row">
 										<div class="col-md-7  col-sm-10 col-sm-push-2 col-xs-11 col-xs-push-1">
 											<ol>
-												<li>  Слышу и понимаю Вас.</li>
-												<li>  Проектирование UI/UX - архитектуру.</li>
-												<li>  Разработка отзывчевого сайта.</li>
-												<li>  Виртуозно использую типографтку.</li>
+												<li>  1. Слышу и понимаю Вас.</li>
+												<li>  2. Проектирование UI/UX - архитектуру.</li>
+												<li>  3. Разработка отзывчевого сайта.</li>
+												<li>  4. Виртуозно использую типографтку.</li>
 											</ol>
 										</div>
 										<div class="col-md-4 col-md-push-1 col-sm-5 col-sm-push-3 col-xs-10 col-xs-push-2">
@@ -97,7 +97,7 @@
 									<div class="col-md-12 col-md-push-6  col-sm-12 col-sm-push-6 col-xs-10 col-xs-push-2">
 										<div class="who_i_am  wow fadeInLeft" data-wow-offset = '100'>Кто же я такой ?</div>
 									</div>
-									<div class="col-md-12 col-sm-12 col-xs-12">
+									<div class="col-md-12 col-sm-12 col-xs-11">
 										<div class="information_about_me">
 											Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis est, aliquid voluptate, asperiores explicabo veritatis illum maxime deleniti magni commodi assumenda totam quaerat atque minus in, error velit nihil libero architecto aperiam iure ea quos voluptas veniam. Quisquam inventore quas distinctio perspiciatis, nostrum, obcaecati at doloremque rerum maiores dolore quod magnam totam officia odit nihil voluptatum laborum similique vel omnis!
 										</div>
@@ -140,7 +140,7 @@
 							</ul>
 						</div>
 					</div>
-					<div class="col-md-4 col-md-push-2 col-sm-4 col-sm-push-2 col-xs-12">
+					<div class="col-md-4 col-md-push-2 col-sm-4 col-sm-push-2 col-xs-5 col-xs-push-3">
 						<div class="second_callme"><p class = "imp">Заинтересовало?</p> <p>Тогда свяжитесь со мной</p></div>
 						<div class="second__button buttons">Обратная связь</div>
 					</div>
@@ -169,15 +169,15 @@
 					<div class="third__block_information">
 						<div class="col-md-6 col-sm-6 col-xs-11 col-xs-push-1">
 							<ol>
-								<li>  Слышу и понимаю Вас.</li>
-								<li>  Проектирование UI/UX - архитектуру.</li>
-								<li>  Разработка отзывчевого сайта.</li>
-								<li>  Виртуозно использую типографтку.</li>
+								<li>  1. Слышу и понимаю Вас.</li>
+								<li>  2. Проектирование UI/UX - архитектуру.</li>
+								<li>  3. Разработка отзывчевого сайта.</li>
+								<li>  4. Виртуозно использую типографтку.</li>
 							</ol>
 						</div>
 					</div>
 					<div class="third__section_form">
-						<div class="col-md-4 col-md-push-1 col-sm-5 col-sm-push-1 col-xs-12">
+						<div class="col-md-4 col-md-push-1 col-sm-5 col-sm-push-1 col-xs-11">
 							<div class="form">
 								<form action=" " method = ' '>
 									<div class="img_photo"><i class="fa-user fa fa-user-o"></i></div>
