--- a/Slardarius/index.html
+++ b/Slardarius/index.html
@@ -65,7 +65,7 @@
 												<li>  4. Виртуозно использую типографтку.</li>
 											</ol>
 										</div>
-										<div class="col-md-4 col-md-push-1 col-sm-5 col-sm-push-3 col-xs-10 col-xs-push-2">
+										<div class="col-md-4 col-md-push-1 col-sm-5 col-sm-push-3 col-xs-12">
 											<div class="next">
 												<p class = "wow fadeInRight"> Узнайте обо мне сами!</p>
 												<div class="buttons_about_me buttons wow fadeIn"> <p> о себе </p> </div>
@@ -124,9 +124,9 @@
 						<div class="second__title wow fadeInRight" data-wow-offset = '50'>Портфолио</div>
 					</div>
 				</div>
-				<div class="second__header_bg_container"> <img src="img/second_bg_container.png" alt=""></div>
+				<div class="second__header_bg_container hidden-xs"> <img src="img/second_bg_container.png" alt=""></div>
 				<div class="row">
-					<div class="col-md-12 col-sm-12 col-xs-12">
+					<div class="col-md-12 col-sm-12 col-xs-11 col-xs-push-1">
 						<div class="second__iknow wow fadeInLeft" data-wow-offset = '50'>Что же я знаю ?</div>
 					</div>
 					<div class="col-md-6 col-md-push-1 col-sm-6 col-xs-10 col-xs-push-2">
@@ -140,7 +140,7 @@
 							</ul>
 						</div>
 					</div>
-					<div class="col-md-4 col-md-push-2 col-sm-4 col-sm-push-2 col-xs-5 col-xs-push-3">
+					<div class="col-md-4 col-md-push-2 col-sm-5 col-sm-push-2 col-xs-12">
 						<div class="second_callme"><p class = "imp">Заинтересовало?</p> <p>Тогда свяжитесь со мной</p></div>
 						<div class="second__button buttons">Обратная связь</div>
 					</div>
@@ -177,7 +177,7 @@
 						</div>
 					</div>
 					<div class="third__section_form">
-						<div class="col-md-4 col-md-push-1 col-sm-5 col-sm-push-1 col-xs-11">
+						<div class="col-md-4 col-md-push-1 col-sm-5 col-sm-push-1 col-xs-12">
 							<div class="form">
 								<form action=" " method = ' '>
 									<div class="img_photo"><i class="fa-user fa fa-user-o"></i></div>
@@ -192,6 +192,10 @@
 				</div>
 			</div>
 		</section>
+
+		<footer>
+			sdf
+		</footer>
 			<!--[if lt IE 9]>
 			<script src="libs/html5shiv/es5-shim.min.js"></script>
 			<script src="libs/html5shiv/html5shiv.min.js"></script>
