--- a/templ/index.html
+++ b/templ/index.html
@@ -36,7 +36,7 @@
 				<div class="row">
 					<div class="top_line">
 						<div class="logo">
-							<div class="col-md-6 col-lg-6 col-xl-6 col-sm-6 col-xs-12">Slardarius</div>
+							<div class="col-md-6 col-lg-6 col-xl-6 col-sm-6 col-xs-12"><p>Slardarius</p></div>
 						</div>
 						<div class="menu">
 							<div class="col-md-6 col-sm-6 col-xs-12">
