--- a/templ/index.html
+++ b/templ/index.html
@@ -75,7 +75,7 @@
 				<div class="bg_white"></div>
 				<div class="row">
 				<div class="col-md-11 col-md-push-1 col-sm-11 col-ms-push-1 col-xs-10 col-xs-push-2 ">
-					<div class="nout_item"><img src="img/nout.png" alt=""></div>
+					<div class="nout_item hidden-xs"><img src="img/nout.png" alt=""></div>
 				</div>
 				</div>
 			</div>
