--- a/templ/index.html
+++ b/templ/index.html
@@ -58,11 +58,19 @@
 						</div>
 						<div class="col-md-6 col-sm-6 col col-xs-11 col-xs-push-1">
 							<div class="list">
-								<ul>
+								
+								<ul class = "hidden-xs">
 									<li>1. Слышу и понимаю Вас.</li>
 									<li>2. Проектирование UI/UX - архитектуру</li>
 									<li>3. Разработка отзывчевого сайте</li>
 									<li>4. Виртуозно использую шрифты</li>
+								</ul>
+
+								<ul class = "hidden-md hidden-sm hidden-lg hidden-xl">
+									<li>1. Слышу и понимаю Вас.</li>
+									<li>2. Грамотное UI/UX</li>
+									<li>3. Адаптивность сайта</li>
+									<li>4. Грамотная типографика</li>
 								</ul>
 							</div>
 						</div>
@@ -80,6 +88,15 @@
 				</div>
 			</div>
 			</header>
+			<section id="Second_section">
+				<div class="Second_content">
+					<div class="About_me">
+						<div class="col-md-6">
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam, neque. Eos autem nisi, asperiores reprehenderit quis quaerat, tempore magnam sed corporis nam officiis doloribus voluptatibus alias inventore sunt quibusdam repudiandae, molestias velit? Obcaecati est, tenetur vero beatae commodi rerum ipsa nesciunt maiores a debitis, iure? Iusto ipsa laudantium provident nisi.</p>
+						</div>
+					</div>
+				</div>
+			</section>
 			<!--[if lt IE 9]>
 			<script src="libs/html5shiv/es5-shim.min.js"></script>
 			<script src="libs/html5shiv/html5shiv.min.js"></script>
