--- a/templ/index.html
+++ b/templ/index.html
@@ -32,67 +32,85 @@
 		</head>
 		<body class = 'isHome'>
 			<header>
-			<div class="container">
-				<div class="row">
-					<div class="top_line">
-						<div class="logo">
-							<div class="col-md-6 col-lg-6 col-xl-6 col-sm-6 col-xs-12"><p>Slardarius</p></div>
-						</div>
-						<div class="menu">
-							<div class="col-md-6 col-sm-6 col-xs-12">
-								<ul>
-									<li>о себе</li>
-									<li>портфолио</li>
-									<li>контакты</li>
-								</ul>
+				<div class="container">
+					<div class="row">
+						<div class="top_line">
+							<div class="logo">
+								<div class="col-md-6 col-lg-6 col-xl-6 col-sm-6 col-xs-12"><p>Slardarius</p></div>
+							</div>
+							<div class="menu">
+								<div class="col-md-6 col-sm-6 col-xs-12">
+									<ul>
+										<li>о себе</li>
+										<li>портфолио</li>
+										<li>контакты</li>
+									</ul>
+								</div>
 							</div>
 						</div>
 					</div>
-				</div>
-				<div class="row">
-					<div class="content">
-						<div class="col-md-10 col-md-push-2 col-sm-11 col-sm-push-1 col-xs-12">
-							<div class="header_title">
-								<h1>Вы спросите почему именно я?</h1>
+					<div class="row">
+						<div class="content">
+							<div class="col-md-10 col-md-push-2 col-sm-11 col-sm-push-1 col-xs-12">
+								<div class="header_title">
+									<h1>Вы спросите почему именно я?</h1>
+								</div>
 							</div>
-						</div>
-						<div class="col-md-6 col-sm-6 col col-xs-11 col-xs-push-1">
-							<div class="list">
-								
-								<ul class = "hidden-xs">
-									<li>1. Слышу и понимаю Вас.</li>
-									<li>2. Проектирование UI/UX - архитектуру</li>
-									<li>3. Разработка отзывчевого сайте</li>
-									<li>4. Виртуозно использую шрифты</li>
-								</ul>
+							<div class="col-md-6 col-sm-6 col col-xs-11 col-xs-push-1">
+								<div class="list">
+									<ul class = "hidden-xs">
+										<li>1. Слышу и понимаю Вас.</li>
+										<li>2. Проектирование UI/UX - архитектуру</li>
+										<li>3. Разработка отзывчевого сайте</li>
+										<li>4. Виртуозно использую шрифты</li>
+									</ul>
 
-								<ul class = "hidden-md hidden-sm hidden-lg hidden-xl">
-									<li>1. Слышу и понимаю Вас.</li>
-									<li>2. Грамотное UI/UX</li>
-									<li>3. Адаптивность сайта</li>
-									<li>4. Грамотная типографика</li>
-								</ul>
+									<ul class = "hidden-md hidden-sm hidden-lg hidden-xl">
+										<li>1. Слышу и понимаю Вас.</li>
+										<li>2. Грамотное UI/UX</li>
+										<li>3. Адаптивность сайта</li>
+										<li>4. Грамотная типографика</li>
+									</ul>
+								</div>
+							</div>
+							<div class="col-md-5 col-md-push-2 col-sm-4 col-sm-push-2 col-xs-12">
+								<div class="next_slide">Узнайте обо мне сами!</div>
+								<div class="next_slide_buttons button">о себе</div>
 							</div>
 						</div>
-						<div class="col-md-5 col-md-push-2 col-sm-4 col-sm-push-2 col-xs-12">
-							<div class="next_slide">Узнайте обо мне сами!</div>
-							<div class="next_slide_buttons button">о себе</div>
+					</div>
+					<div class="bg_white hidden-xs"></div>
+					<div class="row">
+						<div class="col-md-11 col-md-push-1 col-sm-11 col-ms-push-1 col-xs-10 col-xs-push-2 ">
+							<div class="nout_item hidden-xs"><img src="img/nout.png" alt=""></div>
 						</div>
 					</div>
 				</div>
-				<div class="bg_white"></div>
-				<div class="row">
-				<div class="col-md-11 col-md-push-1 col-sm-11 col-ms-push-1 col-xs-10 col-xs-push-2 ">
-					<div class="nout_item hidden-xs"><img src="img/nout.png" alt=""></div>
-				</div>
-				</div>
-			</div>
 			</header>
+
 			<section id="Second_section">
-				<div class="Second_content">
-					<div class="About_me">
+				<div class="container">
+					<div class="row">
 						<div class="col-md-6">
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam, neque. Eos autem nisi, asperiores reprehenderit quis quaerat, tempore magnam sed corporis nam officiis doloribus voluptatibus alias inventore sunt quibusdam repudiandae, molestias velit? Obcaecati est, tenetur vero beatae commodi rerum ipsa nesciunt maiores a debitis, iure? Iusto ipsa laudantium provident nisi.</p>
+							<div class="wrapp">
+								<div class="col-md-12 col-md-push-12 col-sm-12">
+									<div class="Second_title">Кто же я такой?</div>
+								</div>
+								<div class="col-md-12 | col-sm-12 col-sm-push-1 | col-xs-11 col-xs-push-1">
+									<div class="Text_about_me">
+										Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga consequuntur ab praesentium aliquam quisquam recusandae commodi ducimus reprehenderit necessitatibus veritatis, culpa autem, accusamus asperiores assumenda possimus nisi aliquid non omnis libero debitis atque! Deleniti provident, ipsa iusto labore vel molestias qui ullam minus error optio inventore, magni aliquam voluptate explicabo!
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 col-md-push-2 | col-sm-6  | col-xs-6">
+							<div class="My_img"><img src="img/myphoto.png" alt=""></div>
+						</div>
+						<div class="col-md-5 col-md-push-1 | col-sm-6  | col-xs-6">
+							<div class="Inf_addit">Так-же изнакомтесь <span class = "Colorful">с моими работами </span></div>
+						</div>
+						<div class="col-md-5 col-md-push-1 | col-sm-5 col-sm-push-1 | col-xs-6">
+							<div class="next_slide_buttons_work button">Работы</div>
 						</div>
 					</div>
 				</div>
