--- a/templ/index.html
+++ b/templ/index.html
@@ -81,7 +81,7 @@
 					</div>
 					<div class="bg_white hidden-xs"></div>
 					<div class="row">
-						<div class="col-md-11 col-md-push-1 col-sm-11 col-ms-push-1 col-xs-10 col-xs-push-2 ">
+						<div class="col-md-9 col-md-push-2 col-sm-11 col-ms-push-1 col-xs-10 col-xs-push-2 ">
 							<div class="nout_item hidden-xs"><img src="img/nout.png" alt=""></div>
 						</div>
 					</div>
@@ -93,12 +93,15 @@
 					<div class="row">
 						<div class="col-md-6">
 							<div class="wrapp">
-								<div class="col-md-12 col-md-push-12 col-sm-12">
+								<div class="col-md-12 col-md-push-6 col-sm-12 col-xs-12">
 									<div class="Second_title">Кто же я такой?</div>
 								</div>
 								<div class="col-md-12 | col-sm-12 col-sm-push-1 | col-xs-11 col-xs-push-1">
-									<div class="Text_about_me">
+									<div class="Text_about_me hidden-xs">
 										Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga consequuntur ab praesentium aliquam quisquam recusandae commodi ducimus reprehenderit necessitatibus veritatis, culpa autem, accusamus asperiores assumenda possimus nisi aliquid non omnis libero debitis atque! Deleniti provident, ipsa iusto labore vel molestias qui ullam minus error optio inventore, magni aliquam voluptate explicabo!
+									</div>
+									<div class="Text_about_me hidden-sm hidden-md hidden-lg hidden-xl">
+										Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim id consequuntur, iure molestiae debitis soluta distinctio tempore maxime rerum in!
 									</div>
 								</div>
 							</div>
