--- a/templ/index.html
+++ b/templ/index.html
@@ -107,7 +107,7 @@
 							</div>
 						</div>
 						<div class="col-md-4 col-md-push-2 | col-sm-6  | col-xs-6">
-							<div class="My_img"><img src="img/myphoto.png" alt=""></div>
+							<div class="My_img"><img src="img/myphoto.png" alt="Фото разработчика"></div>
 						</div>
 						<div class="col-md-5 col-md-push-1 | col-sm-6  | col-xs-6">
 							<div class="Inf_addit">Так-же изнакомтесь <span class = "Colorful">с моими работами </span></div>
@@ -118,6 +118,55 @@
 					</div>
 				</div>
 			</section>
+
+			<section id="Third_section">
+				<div class="container">
+					<div class="row">
+						<div class="col-md-5 col-md-push-7 col-sm-12 col-xs-12">
+							<div class="Third_title">Портфолио1</div>
+						</div>
+						<div class="Img_title"><img src="img/line.png" alt="Линии"></div>
+					</div>
+					<div class="row">
+						<div class="Img_background"><img src="img/second_bg_container.png" alt=""></div>
+						<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
+							<div class="Title_whatiknow">Что же я знаю?</div>
+							<div class="col-md-3 col-md-push-2 col-sm-3 col-sm-push-2 col-xs-10 col-xs-push-2">
+								<div class="iknow">
+									<ul>
+										<li>html</li>
+										<li>css</li>
+										<li>javascript</li>
+										<li>jqery</li>
+										<li>bootstrap</li>
+									</ul>
+								</div>
+							</div>
+							<div class="col-md-3 col-md-push-4 col-sm-4 col-sm-push-3 col-xs-12">
+								<div class="Inf_addit_link">
+									<p id = '_link_title'>Заинтересовало?</p>
+									<p id = '_link_text'>Тогда свяжитесь со мной</p>
+								</div>
+								<div class="next_slide_buttons_link button">обратная связь</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="containerf-luid">
+					<div class="row">
+						<div class="background_container">
+							<div class="container">
+								<div class="row">
+								<div class="col-md-4 col-sm-4 col-xs-4"><div class="Img_slideP"><p>Работа №1</p><img src="img/first.jpg" alt=""></div></div>
+								<div class="col-md-4 col-sm-4 col-xs-4"><div class="Img_slideP"><p>Работа №2</p><img src="img/first.jpg" alt=""></div></div>
+								<div class="col-md-4 col-sm-4 col-xs-4"><div class="Img_slideP"><p>Работа №3</p><img src="img/first.jpg" alt=""></div></div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 			<!--[if lt IE 9]>
 			<script src="libs/html5shiv/es5-shim.min.js"></script>
 			<script src="libs/html5shiv/html5shiv.min.js"></script>
